# validacion_enerhabitat

./: README.md  main.py  pyproject.toml
data/: comparacion.csv  enerhabitat-2025-10-20.csv
epw/: Tsa_Temixco_mayo_este-a0p3.csv  Tsa_Temixco_mayo_este-a0p3.def  Tsa_Temixco_mayo_este-a0p3CST.audit  Tsa_Temixco_mayo_este-a0p3CST.epw  Tsa_Temixco_mayo_este-a0p3CST.stat
epw/.ipynb_checkpoints/: Tsa_Temixco_mayo_este-a0p3CST-checkpoint.epw
idf/: VALIDA~1.audit  VALIDA~1.rvaudit  VALIDA~1Table.html  validacion.audit  validacion.bnd  validacion.csv  validacion.eio  validacion.err  validacion.eso  validacion.idf  validacion.mdd  validacion.mtd  validacion.rdd  validacion.rvaudit  validacion.shd  validacion.sql  validacionTable.html
notebook/: 001_exporting_csv_for_epw.ipynb  002_comparacion.ipynb
notebook/.ipynb_checkpoints/: 001_exporting_csv_for_epw-checkpoint.ipynb
osm/: validacion.osm
osm/validacion/: floorplan.json  out.osw  stdout  workflow.osw
osm/validacion/reports/: openstudio_results_report.html
osm/validacion/run/: data_point_out.json  eplusout.audit  eplusout.bnd  eplusout.eio  eplusout.end  eplusout.err  eplusout.eso  eplusout.mdd  eplusout.mtd  eplusout.rdd  eplusout.sql  eplustbl.htm  finished.job  in.idf  in.osm  pre-preprocess.idf  started.job  stdout-energyplus
